--- a/Bluecord/src/app/episodes/episodes.component.html
+++ b/Bluecord/src/app/episodes/episodes.component.html
@@ -1,6 +1,45 @@
-﻿<h1 class="text-center">THE EPISODES WILL BE ON THIS PAGE.</h1>
-<h1 class="text-center">POSSIBLY IN THIS FORMAT.</h1>
-<div class="boxed">Episode 1</div>
-<div class="boxed">Episode 2</div>
-<div class="boxed">Episode 3</div>
-<div class="boxed">Episode etc...</div>
+﻿<div class="table-responsive">
+  <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Description</th>
+        <th>Run-time</th>
+        <th>PLAY</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Episode 1</td>
+        <td>We meet our heroes</td>
+        <td>20 mins</td>
+        <td><img src="/assets/images/play-button.png" alt="Alternate Text" /></td>
+      </tr>
+      <tr>
+        <td>Episode 2</td>
+        <td>Russ and Eddy find a promising lead</td>
+        <td>20 mins</td>
+        <td><img src="/assets/images/play-button.png" alt="Alternate Text" /></td>
+      </tr>
+      <tr>
+        <td>Episode 3</td>
+        <td>Russ receives an impossible letter</td>
+        <td>20 mins</td>
+        <td><img src="/assets/images/play-button.png" alt="Alternate Text" /></td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+  
+  
+ 
+
+ 
+<script>
+  var a = new Audio();
+  a.src = "http://www.stephaniequinn.com/Music/Allegro%20from%20Duet%20in%20C%20Major.mp3";
+  a.load();
+  function manual_start() {
+    a.play();
+  }
+</script>
