--- a/Bluecord/src/app/home/home.component.html
+++ b/Bluecord/src/app/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
+﻿<p class="text-center">
+  Welcome to the blue cord. The things you see and hear on this site may scare you. They will burrow into your mind and stay with you forever. 
+  Anyone under 18 please turn back now. If you enter you will forever be connected to the Blue Cord.
 </p>
+
+
+
