--- a/Bluecord/src/app/app.component.html
+++ b/Bluecord/src/app/app.component.html
@@ -1,7 +1,16 @@
-﻿  <h1 class="text-center">THE BLUE CORD</h1>
-  <nav class="text-center">
-    <a routerLink="/home" routerLinkActive="active">Home</a>
-    <a routerLink="/episodes" routerLinkActive="active">Episodes</a>
-  </nav>
+﻿<nav class="navbar">
+  <div class="dropdown pull-right container-fluid">
+    <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
+      Menu
+      <span class="caret"></span>
+    </button>
+    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+      <li role="presentation"><a role="menuitem" tabindex="-1" routerLink="/home">Home</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" routerLink="/episodes">Episodes</a></li>
+    </ul>
+  </div>
+</nav>
+<img src="assets/images/logo.jpg" class="img-responsive center-block" />
+<br>
   <router-outlet></router-outlet>  
 
