--- a/Bluecord/src/app/episodes/episodes.component.html
+++ b/Bluecord/src/app/episodes/episodes.component.html
@@ -13,13 +13,13 @@
         <td>Episode 1</td>
         <td>We meet our heroes</td>
         <td>20 mins</td>
-        <td><img src="/assets/images/play-button.png" alt="Alternate Text" /></td>
+        <td><audio src="/assets/audio/test2.mp3" controls><p>can we see this?</p></audio></td>
       </tr>
       <tr>
         <td>Episode 2</td>
         <td>Russ and Eddy find a promising lead</td>
         <td>20 mins</td>
-        <td><img src="/assets/images/play-button.png" alt="Alternate Text" /></td>
+        <td><audio src="/assets/audio/test.m4a" controls><p>can we see this?</p></audio></td>
       </tr>
       <tr>
         <td>Episode 3</td>
@@ -31,15 +31,8 @@
   </table>
 </div>
   
+
   
  
 
  
-<script>
-  var a = new Audio();
-  a.src = "http://www.stephaniequinn.com/Music/Allegro%20from%20Duet%20in%20C%20Major.mp3";
-  a.load();
-  function manual_start() {
-    a.play();
-  }
-</script>
