--- a/Bluecord/src/app/episodes/episodes.component.html
+++ b/Bluecord/src/app/episodes/episodes.component.html
@@ -1,4 +1,5 @@
-﻿<div class="table-responsive">
+﻿<img src="/assets/images/nraLogo.png" alt="nraLogo" class="center-block" /><br />
+<div class="table-responsive">
   <table class="table table-bordered">
     <thead>
       <tr>
@@ -30,6 +31,7 @@
     </tbody>
   </table>
 </div>
+
   
 
   
