--- a/Bluecord/src/app/home/home.component.html
+++ b/Bluecord/src/app/home/home.component.html
@@ -1,8 +1,10 @@
-﻿<div class="fullscreen-bg">
+﻿<img src="/assets/images/bluecordlogo.png" alt="logo" class="center-block logo" />
+<div class="fullscreen-bg">
   <video loop muted autoplay class="fullscreen-bg__video">
-    <source src="/assets/audio/background.mp4" type="video/webm">
+    <source src="/assets/images/viday.mp4" type="video/webm">
   </video>
 </div>
+
 
 <audio src="/assets/audio/bodiesonbay.m4a" autoplay="autoplay">
   <p>Yes you need a new browser. Come back later kid.</p>
