--- a/Bluecord/src/app/app.component.html
+++ b/Bluecord/src/app/app.component.html
@@ -1,4 +1,4 @@
-﻿<nav class="navbar">
+﻿<!--<nav class="navbar">
   <div class="dropdown pull-right container-fluid">
     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
       Menu
@@ -9,8 +9,6 @@
       <li role="presentation"><a role="menuitem" tabindex="-1" routerLink="/episodes">Episodes</a></li>
     </ul>
   </div>
-</nav>
-
-<br>
+</nav>-->
   <router-outlet></router-outlet>  
 
