--- a/Bluecord/src/app/home/home.component.css
+++ b/Bluecord/src/app/home/home.component.css
@@ -15,3 +15,28 @@
   width: 100%;
   height: 100%;
 }
+
+@media (min-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .fullscreen-bg {
+    background: url('/assets/images/logo.jpg') center center / no-repeat;
+  }
+
+  .fullscreen-bg__video {
+    display: none;
+  }
+}
+
