--- a/Bluecord/src/app/app.component.html
+++ b/Bluecord/src/app/app.component.html
@@ -1,4 +1,4 @@
-﻿<!--<nav class="navbar">
+﻿<nav class="navbar">
   <div class="dropdown pull-right container-fluid">
     <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
       Menu
@@ -7,8 +7,9 @@
     <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
       <li role="presentation"><a role="menuitem" tabindex="-1" routerLink="/home">Home</a></li>
       <li role="presentation"><a role="menuitem" tabindex="-1" routerLink="/episodes">Episodes</a></li>
+      <li role="presentation"><a role="menuitem" tabindex="-1" routerLink="/connected">The Connected</a></li>
     </ul>
   </div>
-</nav>-->
-  <router-outlet></router-outlet>  
+</nav>
+ <router-outlet></router-outlet>  
 
