--- a/Bluecord/src/app/episodes/episodes.component.html
+++ b/Bluecord/src/app/episodes/episodes.component.html
@@ -1,4 +1,4 @@
-﻿<img src="/assets/images/nraLogo.png" alt="nraLogo" class="center-block" /><br />
+﻿<img src="/assets/images/nraLogo4.png" alt="nraLogo" class="center-block img-responsive" /><br />
 <div class="table-responsive">
   <table class="table table-bordered">
     <thead>
@@ -14,13 +14,13 @@
         <td>Episode 1</td>
         <td>We meet our heroes</td>
         <td>20 mins</td>
-        <td><audio src="/assets/audio/test2.mp3" controls><p>can we see this?</p></audio></td>
+        <td><audio src="/assets/audio/test2.mp3" controls></audio></td>
       </tr>
       <tr>
         <td>Episode 2</td>
         <td>Russ and Eddy find a promising lead</td>
         <td>20 mins</td>
-        <td><audio src="/assets/audio/test.m4a" controls><p>can we see this?</p></audio></td>
+        <td><audio src="/assets/audio/test.m4a" controls></audio></td>
       </tr>
       <tr>
         <td>Episode 3</td>
