--- a/Bluecord/src/app/home/home.component.css
+++ b/Bluecord/src/app/home/home.component.css
@@ -13,7 +13,103 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 25%;
+}
+
+section {
+  display: block;
+}
+
+.section-header {
+  padding: 150px 0;
+  text-align: center;
+}
+
+.section-header ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.section-header ul li {
+  display: inline-block;
+  color: blue;
+  font-family: lazer84;
+  font-size: 60px;
+  margin: 0 60px;
+  text-transform: uppercase;
+  background: none;
+  -webkit-background-clip: inherit;
+  -webkit-text-fill-color: transparent;
+  filter: alpha(opacity=0);
+  opacity: 0;
+  zoom: 1;
+  transition: all 1.5s ease-out;
+}
+
+.section-header ul li:first-child {
+  margin-left: 0;
+}
+
+.section-header ul li:last-child {
+  margin-right: 0;
+}
+
+.section-header ul li:nth-child(odd) {
+  -moz-transform: translateY(-100px);
+  -moz-transform-origin: left top;
+  -ms-transform: translateY(-100px);
+  -ms-transform-origin: left top;
+  -o-transform: translateY(-100px);
+  -o-transform-origin: 100% 0;
+  -webkit-transform: translateY(-100px);
+  -webkit-transform-origin: left top;
+  transform: translateY(-100px);
+  transform-origin: left top;
+}
+
+.section-header ul li:nth-child(2n) {
+  -moz-transform: translateY(100px);
+  -moz-transform-origin: left top;
+  -ms-transform: translateY(100px);
+  -ms-transform-origin: left top;
+  -o-transform: translateY(100px);
+  -o-transform-origin: 100% 0;
+  -webkit-transform: translateY(100px);
+  -webkit-transform-origin: left top;
+  transform: translateY(100px);
+  transform-origin: left top;
+}
+
+.section-header.animate li {
+  filter: alpha(opacity=100);
+  opacity: 1;
+  zoom: 1;
+}
+
+.section-header.animate li:nth-child(2n), .section-header.animate li:nth-child(odd) {
+  -moz-transform: translateY(0);
+  -moz-transform-origin: left top;
+  -ms-transform: translateY(0);
+  -ms-transform-origin: left top;
+  -o-transform: translateY(0);
+  -o-transform-origin: 100% 0;
+  -webkit-transform: translateY(0);
+  -webkit-transform-origin: left top;
+  transform: translateY(0);
+  transform-origin: left top;
+}
+
+.unmute {
+  background-image: url(http://franriavilla.in/images/unmute.png);
+  background-size: cover;
+  width: 35px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.mute {
+  background-image: url(http://franriavilla.in/images/mute.png);
 }
 
 @media (min-aspect-ratio: 16/9) {
@@ -34,9 +130,10 @@
   .fullscreen-bg {
     background: url('/assets/images/logo.jpg') center center / no-repeat;
   }
-
-  .fullscreen-bg__video {
-    display: none;
-  }
 }
+
+ 
+
+  
+
 
